# emas

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO  appversion  dh.c  emas.c  keywords.c  lexer.l  lexer_utils.c  lexer_utils.h  parser.y  parser_utils.c  parser_utils.h  prog.c  prog.h  st.c  st.h  writers.c  writers.h
.ci/: ci-script.sh
.github/workflows/: cmake.yml
asminc/: cpu.inc  io.inc  mega.inc  multix.inc  mx.inc  mx_io.inc  mx_irq.inc  mx_line.inc  mx_setcfg.inc
examples/: loops.asm  print.asm
include/: dh.h  keywords.h  lexer_utils.h  parser_utils.h  prog.h  st.h  writers.h
src/: CMakeLists.txt  dh.c  dh.h  emas.c  keywords.c  lexer.l  lexer_utils.c  lexer_utils.h  parser.y  parser_utils.c  prog.c  st.c  st.h  writers.c
tests/: afl-emas.dict  asmtest.sh  run_test.sh
tests/acceptance/args/: blc.asm  blc.out  blc_low_bits.asm  blc_low_bits.out  brc.asm  brc.out  brc_gt_max.asm  brc_gt_max.out  brc_lt_min.asm  brc_lt_min.out  exl.asm  exl.out  exl_gt_max.asm  exl_gt_max.out  exl_lt_min.asm  exl_lt_min.out  hlt.asm  hlt.out  hlt_gt_max.asm  hlt_gt_max.out  hlt_lt_min.asm  hlt_lt_min.out  norm_Dmod.asm  norm_Dmod.out  norm_imm.asm  norm_imm.out  norm_imm_gt_max.asm  norm_imm_gt_max.out  norm_imm_lt_min.asm  norm_imm_lt_min.out  norm_imm_rB.asm  norm_imm_rB.out  norm_no_r.asm  norm_no_r.out  norm_rA.asm  norm_rA.out  norm_rB_imm.asm  norm_rB_minus_imm.asm  norm_rB_minus_imm.out  norm_rC.asm  (+31 more)
tests/acceptance/dword/: dword_from_float.asm  dword_from_float.out  int-min-overflow.asm  int-min-overflow.out  int-min.asm  int-min.out  list.asm  list.out  uint-max-overflow.asm  uint-max-overflow.out  uint-max.asm  uint-max.out
tests/acceptance/expr/: add.asm  add.out  div.asm  div.out  div_by_0.asm  div_by_0.out  div_by_0_float.asm  div_by_0_float.out  mul.asm  mul.out  precedence.asm  precedence.out  sub.asm  sub.out
tests/acceptance/float/: arith.asm  arith.out  const_equ.asm  const_equ.out  dword_from_float.out  from_float.asm  from_int.asm  from_int.out  large_float.asm  large_float.out  large_int.asm  large_int.out  norm_arg.asm  norm_arg.out  overflow.asm  overflow.out  short_arg.asm  short_arg.out  underflow.asm  underflow.out  word_from_float.asm  word_from_float.out
tests/acceptance/labels/: labels_pass1.asm  labels_pass1.out  labels_pass2.asm  labels_pass2.out
tests/acceptance/ops/: group_bn.asm  group_bn.out  group_c.asm  group_c.out  group_fd.asm  group_fd.out  group_g.asm  group_g.out  group_j.asm  group_j.out  group_js.asm  group_js.out  group_ka1.asm  group_ka1.out  group_ka2.asm  group_ka2.out  group_l.asm  group_l.out  group_m400_cron.asm  group_m400_cron.out  group_m400_sind.asm  group_m400_sind.out  group_m400_sint.asm  group_m400_sint.out  group_mx16.asm  group_mx16.out  group_norm1.asm  group_norm1.out  group_norm2.asm  group_norm2.out  group_s.asm  group_s.out
tests/acceptance/pragmas/: ascii.asm  ascii.out  asciiz.asm  asciiz.out  const.asm  const.out  const_redef.asm  const_redef.out  equ.asm  equ.out  org.asm  org.out  org_back.asm  org_back.out  res.asm  res.out  res_negative.asm  res_negative.out  res_toobig.asm  res_toobig.out  res_val.asm  res_val.out  word.asm  word.out
tests/acceptance/program/: comments.asm  empty_witespaces.asm
vim/ftdetect/: emas.vim
vim/syntax/: emas.vim
