CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
PROJECT(emas C)

include(appversion.cmake)

find_package(BISON REQUIRED)
find_package(FLEX REQUIRED)
find_package(emelf REQUIRED)
find_package(emawp REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src)

ADD_DEFINITIONS(-Wall -std=c99 -D_XOPEN_SOURCE=700 -O2 -DEMAS_VERSION="${APP_VERSION}")

ADD_SUBDIRECTORY(src)

# vim: tabstop=4
